Change name, etc.

--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,24 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Unsplash It</title>
-  <meta name="description" content="Beautiful placeholders using images from unsplash">
-  <meta name="keywords" content="placeholders,images,unsplash">
+  <title>Lorem Picsum</title>
+  <meta name="description" content="Lorem Ipsum... but for photos">
+  <meta name="keywords" content="placeholders,images">
   <meta name="author" content="David Marby (http://dmarby.se) & Nijiko Yonskai (https://github.com/nijikokun)">
   <meta name="robots" content="all">
 
-  <meta property="og:site_name" content="Unsplash it">
-  <meta property="og:title" content="Unsplash it">
-  <meta property="og:description" content="Beautiful placeholders using images from unsplash">
+  <meta property="og:site_name" content="Lorem Picsum">
+  <meta property="og:title" content="Lorem Picsum">
+  <meta property="og:description" content="Lorem Ipsum... but for photos">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://unsplash.it/250/250">
-  <meta property="og:url" content="https://unsplash.it">
+  <meta property="og:image" content="https://picsum.photos/250/250">
+  <meta property="og:url" content="https://picsum.photos">
 
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
   <link rel="dns-prefetch" href="//code.jquery.com">
   <link rel="dns-prefetch" href="//www.google-analytics.com">
-  <link rel="dns-prefetch" href="//unsplash.it">
+  <link rel="dns-prefetch" href="//picsum.photos">
 
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
@@ -69,11 +69,10 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="intro-message">
-              <a href="https://unsplash.it">
-                <h1>Unsplash It</h1>
+              <a href="https://picsum.photos">
+                <h1>Lorem Picsum</h1>
               </a>
-              <h3>Beautiful placeholders using images from <a href="https://unsplash.com">unsplash</a></h3>
-              <h4>This website is not affiliated with unsplash.com</h4>
+              <h3>Lorem Ipsum... but for photos</h3>
             </div>
           </div>
         </div>
@@ -89,9 +88,9 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Basic Usage</h2>
           <p class="lead">Just put your image size (width &amp; height) after our URL and you'll get a placeholder.</p>
-          <pre><code>https://unsplash.it/200/300</code></pre>
+          <pre><code>https://picsum.photos/200/300</code></pre>
           <p class="lead">To get a square image, just put the size you want.</p>
-          <pre><code>https://unsplash.it/200</code></pre>
+          <pre><code>https://picsum.photos/200</code></pre>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
           <img class="img-responsive" src="/458/354" alt="">
@@ -107,7 +106,7 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Random image</h2>
           <p class="lead">Get a random image by appending <code>?random</code> to the end of the url.</p>
-          <pre><code>https://unsplash.it/200/300/?random</code></pre>
+          <pre><code>https://picsum.photos/200/300/?random</code></pre>
         </div>
         <div class="col-lg-5 col-sm-pull-6 col-sm-6">
           <img class="img-responsive random-image" src="/458/354?random" alt="">
@@ -123,7 +122,7 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Grayscale</h2>
           <p class="lead">Use the <code>/g/</code> path to greyscale the image.</p>
-          <pre><code>https://unsplash.it/g/200/300</code></pre>
+          <pre><code>https://picsum.photos/g/200/300</code></pre>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
           <img class="img-responsive" src="/g/458/354" alt="">
@@ -139,7 +138,7 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">List images</h2>
           <p class="lead">Get a list of images by using the <code>/list</code> endpoint.</p>
-          <pre><code>https://unsplash.it/list</code></pre>
+          <pre><code>https://picsum.photos/list</code></pre>
         </div>
         <div class="col-lg-5 col-sm-pull-6 col-sm-6">
           <pre><code>[
@@ -166,8 +165,8 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Specific Image</h2>
           <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url.</p>
-          <pre><code>https://unsplash.it/200/300?image=0</code></pre>
-          <p>You can find a list of all images <a href="https://unsplash.it/images">here.</a></p>
+          <pre><code>https://picsum.photos/200/300?image=0</code></pre>
+          <p>You can find a list of all images <a href="https://picsum.photos/images">here.</a></p>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
           <img class="img-responsive" src="/458/354?image=0" alt="">
@@ -183,7 +182,7 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Blurred image</h2>
           <p class="lead">Get a blurred image by appending <code>?blur</code> to the end of the url.</p>
-          <pre><code>https://unsplash.it/200/300/?blur</code></pre>
+          <pre><code>https://picsum.photos/200/300/?blur</code></pre>
         </div>
         <div class="col-lg-5 col-sm-pull-6 col-sm-6">
           <img class="img-responsive" src="/458/354?image=0&blur" alt="">
@@ -200,7 +199,7 @@
           <h2 class="section-heading">Crop Gravity</h2>
           <p class="lead">Select the cropping gravity by adding <code>?gravity</code> to the end of the url.</p>
           <p>Valid options are: <code>north, east, south, west, center</code></p>
-          <pre><code>https://unsplash.it/200/300/?gravity=east</code></pre>
+          <pre><code>https://picsum.photos/200/300/?gravity=east</code></pre>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
           <img class="img-responsive" src="/458/354?gravity=east" alt="">
@@ -215,13 +214,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p><a href="https://www.digitalocean.com?ref=unsplash.it"><img class="digitalocean" alt="Proudly hosted by DigitalOcean" src="/digitalocean.png"></a>
+          <p><a href="https://www.digitalocean.com?ref=picsum.photos"><img class="digitalocean" alt="Proudly hosted by DigitalOcean" src="/digitalocean.png"></a>
           <span class="plus glyphicon glyphicon-plus" aria-hidden="true"></span>
-          <a href="https://belugacdn.com?ref=unsplash.it"><img class="belugacdn" alt="CDN provided by BelugaCDN" src="/belugacdn.png"></a></p>
+          <a href="https://belugacdn.com?ref=picsum.photos"><img class="belugacdn" alt="CDN provided by BelugaCDN" src="/belugacdn.png"></a></p>
           <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
-          <p><a href="https://github.com/DMarby/unsplash-it">Source</a></p>
+          <p><a href="https://github.com/DMarby/picsum-photos">Source</a></p>
           <p>Having trouble? Poke <a href="https://twitter.com/DMarby">@DMarby</a> on Twitter</p>
-          <p style="margin-top: -15px">This website is not affiliated with unsplash.com</p>
+          <p>Images from <a href="https://unsplash.com">unsplash</a></p>
         </div>
       </div>
     </div>
