--- a/public/images.html
+++ b/public/images.html
@@ -1,24 +1,24 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Unsplash It - Images</title>
-  <meta name="description" content="Beautiful placeholders using images from unsplash">
-  <meta name="keywords" content="placeholders,images,unsplash">
+  <title>Lorem Picsum - Images</title>
+  <meta name="description" content="Lorem Ipsum... but for photos">
+  <meta name="keywords" content="placeholders,images">
   <meta name="author" content="David Marby (http://dmarby.se) & Nijiko Yonskai (https://github.com/nijikokun)">
   <meta name="robots" content="all">
 
-  <meta property="og:site_name" content="Unsplash it">
-  <meta property="og:title" content="Unsplash it">
-  <meta property="og:description" content="Beautiful placeholders using images from unsplash">
+  <meta property="og:site_name" content="Lorem Picsum">
+  <meta property="og:title" content="Lorem Picsum">
+  <meta property="og:description" content="Lorem Ipsum... but for photos">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://unsplash.it/250/250">
-  <meta property="og:url" content="https://unsplash.it">
+  <meta property="og:image" content="https://picsum.photos/250/250">
+  <meta property="og:url" content="https://picsum.photos">
 
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
   <link rel="dns-prefetch" href="//code.jquery.com">
   <link rel="dns-prefetch" href="//www.google-analytics.com">
-  <link rel="dns-prefetch" href="//unsplash.it">
+  <link rel="dns-prefetch" href="//picsum.photos">
 
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
@@ -52,10 +52,10 @@
           $template.find('.author').text(image.author);
           $template.find('.author').attr('href', image.author_url);
           $template.find('.id').text('#' + image.id);
-          $template.find('.id').attr('href', 'https://unsplash.it/' + image.width + '/' + image.height + '?image=' + image.id);
+          $template.find('.id').attr('href', 'https://picsum.photos/' + image.width + '/' + image.height + '?image=' + image.id);
           $template.find('.post').attr('href', image.post_url);
           $template.find('.lead').text(image.author_url);
-          $template.find('code').text('https://unsplash.it/200/300?image=' + image.id);
+          $template.find('code').text('https://picsum.photos/200/300?image=' + image.id);
           $template.find('img').attr('data-src', '/458/354?image=' + image.id);
           $('.imageContainer').prepend($template);
         }
@@ -80,9 +80,8 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="intro-message">
-              <a href="https://unsplash.it"><h1>Unsplash It</h1></a>
-              <h3>Beautiful placeholders using images from <a href="https://unsplash.com">unsplash</a></h3>
-              <h4>This website is not affiliated with unsplash.com</h4>
+              <a href="https://picsum.photos"><h1>Lorem Picsum</h1></a>
+              <h3>Lorem Ipsum... but for photos</h3>
             </div>
           </div>
         </div>
@@ -99,9 +98,9 @@
         <div class="col-lg-5 col-sm-6">
           <div class="clearfix"></div>
           <h2 class="section-heading">Image Gallery</h2>
-          <p class="lead">Here you can view all images Unsplash It uses</p>
+          <p class="lead">Here you can view all images Lorem Picsum uses</p>
           <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url</p>
-          <pre><code>https://unsplash.it/200/300?image=0</code></pre>
+          <pre><code>https://picsum.photos/200/300?image=0</code></pre>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
           <img class="img-responsive" src="/458/354?image=0" alt="">
@@ -119,13 +118,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <p><a href="https://www.digitalocean.com?ref=unsplash.it"><img class="digitalocean" alt="Proudly hosted by DigitalOcean" src="/digitalocean.png"></a>
+            <p><a href="https://www.digitalocean.com?ref=picsum.photos"><img class="digitalocean" alt="Proudly hosted by DigitalOcean" src="/digitalocean.png"></a>
             <span class="plus glyphicon glyphicon-plus" aria-hidden="true"></span>
-            <a href="https://belugacdn.com?ref=unsplash.it"><img class="belugacdn" alt="CDN provided by BelugaCDN" src="/belugacdn.png"></a></p>
+            <a href="https://belugacdn.com?ref=picsum.photos"><img class="belugacdn" alt="CDN provided by BelugaCDN" src="/belugacdn.png"></a></p>
             <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
-            <p><a href="https://github.com/DMarby/unsplash-it">Source</a></p>
+            <p><a href="https://github.com/DMarby/picsum-photos">Source</a></p>
             <p>Having trouble? Poke <a href="https://twitter.com/DMarby">@DMarby</a> on Twitter</p>
-            <p style="margin-top: -15px">This website is not affiliated with unsplash.com</p>
+            <p>Images from <a href="https://unsplash.com">unsplash</a></p>
           </div>
         </div>
       </div>
