--- a/public/images.html
+++ b/public/images.html
@@ -95,15 +95,18 @@
   <div class="content-section-right">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-sm-6">
+        <div class="col-sm-5">
           <div class="clearfix"></div>
           <h2 class="section-heading">Image Gallery</h2>
           <p class="lead">Here you can view all images Lorem Picsum uses</p>
           <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url</p>
           <pre><code>https://picsum.photos/200/300?image=0</code></pre>
         </div>
-        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+        <div class="col-lg-offset-1 col-sm-5">
           <img class="img-responsive" src="/458/354?image=0" alt="">
+        </div>
+        <div class="col-sm-1">
+          <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CK7DC27M&placement=picsumphotos" id="_carbonads_js"></script>
         </div>
       </div>
     </div>
