--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
   <div class="content-section-right">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-sm-6">
+        <div class="col-sm-5">
           <div class="clearfix"></div>
           <h2 class="section-heading">Basic Usage</h2>
           <p class="lead">Just put your image size (width &amp; height) after our URL and you'll get a placeholder.</p>
@@ -92,8 +92,11 @@
           <p class="lead">To get a square image, just put the size you want.</p>
           <pre><code>https://picsum.photos/200</code></pre>
         </div>
-        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+        <div class="col-lg-offset-1 col-sm-5">
           <img class="img-responsive" src="/458/354" alt="">
+        </div>
+        <div class="col-sm-1">
+          <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CK7DC27M&placement=picsumphotos" id="_carbonads_js"></script>
         </div>
       </div>
     </div>
@@ -102,13 +105,13 @@
   <div class="content-section-left">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+        <div class="col-sm-push-5 col-lg-push-6 col-sm-5">
           <div class="clearfix"></div>
           <h2 class="section-heading">Random image</h2>
           <p class="lead">Get a random image by appending <code>?random</code> to the end of the url.</p>
           <pre><code>https://picsum.photos/200/300/?random</code></pre>
         </div>
-        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+        <div class="col-sm-pull-5 col-sm-5">
           <img class="img-responsive random-image" src="/458/354?random" alt="">
         </div>
       </div>
@@ -118,13 +121,13 @@
   <div class="content-section-right">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-sm-6">
+        <div class="col-sm-5">
           <div class="clearfix"></div>
           <h2 class="section-heading">Grayscale</h2>
           <p class="lead">Use the <code>/g/</code> path to greyscale the image.</p>
           <pre><code>https://picsum.photos/g/200/300</code></pre>
         </div>
-        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+        <div class="col-lg-offset-1 col-sm-5">
           <img class="img-responsive" src="/g/458/354" alt="">
         </div>
       </div>
@@ -134,13 +137,13 @@
   <div class="content-section-left">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+        <div class="col-sm-push-5 col-lg-push-6 col-sm-5">
           <div class="clearfix"></div>
           <h2 class="section-heading">List images</h2>
           <p class="lead">Get a list of images by using the <code>/list</code> endpoint.</p>
           <pre><code>https://picsum.photos/list</code></pre>
         </div>
-        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+        <div class="col-sm-pull-5 col-sm-5">
           <pre><code>[
     {
         "format": "jpeg",
@@ -161,14 +164,14 @@
   <div class="content-section-right">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-sm-6">
+        <div class="col-sm-5">
           <div class="clearfix"></div>
           <h2 class="section-heading">Specific Image</h2>
           <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url.</p>
           <pre><code>https://picsum.photos/200/300?image=0</code></pre>
           <p>You can find a list of all images <a href="https://picsum.photos/images">here.</a></p>
         </div>
-        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+        <div class="col-lg-offset-1 col-sm-5">
           <img class="img-responsive" src="/458/354?image=0" alt="">
         </div>
       </div>
@@ -178,13 +181,13 @@
   <div class="content-section-left">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+        <div class="col-sm-push-5 col-lg-push-6 col-sm-5">
           <div class="clearfix"></div>
           <h2 class="section-heading">Blurred image</h2>
           <p class="lead">Get a blurred image by appending <code>?blur</code> to the end of the url.</p>
           <pre><code>https://picsum.photos/200/300/?blur</code></pre>
         </div>
-        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+        <div class="col-sm-pull-5 col-sm-5">
           <img class="img-responsive" src="/458/354?image=0&blur" alt="">
         </div>
       </div>
@@ -194,14 +197,14 @@
   <div class="content-section-right">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-sm-6">
+        <div class="col-sm-5">
           <div class="clearfix"></div>
           <h2 class="section-heading">Crop Gravity</h2>
           <p class="lead">Select the cropping gravity by adding <code>?gravity</code> to the end of the url.</p>
           <p>Valid options are: <code>north, east, south, west, center</code></p>
           <pre><code>https://picsum.photos/200/300/?gravity=east</code></pre>
         </div>
-        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+        <div class="col-lg-offset-1 col-sm-5">
           <img class="img-responsive" src="/458/354?gravity=east" alt="">
         </div>
       </div>
