--- a/static/index.html
+++ b/static/index.html
@@ -18,23 +18,9 @@
   <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
   <link rel="dns-prefetch" href="//code.jquery.com">
   <link rel="dns-prefetch" href="//www.google-analytics.com">
-  <link rel="dns-prefetch" href="//picsum.photos">
 
-  <link rel="shortcut icon" href="assets/images/favicon.ico">
-  <link rel="icon" sizes="16x16 32x32 64x64" href="assets/images/favicon.ico">
-  <link rel="icon" type="image/png" sizes="196x196" href="assets/images/favicon-196.png">
-  <link rel="icon" type="image/png" sizes="160x160" href="assets/images/favicon-160.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="64x64" href="assets/images/favicon-64.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicon-152.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicon-144.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicon-120.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicon-114.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicon-76.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicon-72.png">
-  <link rel="apple-touch-icon" href="assets/images/favicon-57.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
 
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
@@ -200,8 +186,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <p><a href="https://www.digitalocean.com?ref=picsum.photos"><img class="digitalocean" alt="Proudly hosted by DigitalOcean" src="assets/images/digitalocean.png"></a></p>
-            <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
+            <p><a href="https://www.digitalocean.com/?utm_medium=opensource&utm_source=picsum"><img class="digitalocean" alt="Powered by DigitalOcean" src="assets/images/digitalocean.svg"></a></p>
+            <p>Created by <a href="https://dmarby.se">David Marby</a> & <a href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
             <p><a href="https://github.com/DMarby/picsum-photos">Source</a></p>
             <p>Having trouble? Poke <a href="https://twitter.com/DMarby">@DMarby</a> on Twitter</p>
             <p>Images from <a href="https://unsplash.com">unsplash</a></p>
