Add belugacdn to the footer

--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,14 @@
   <footer>
     <div class="overlay flex justify-center">
       <div>
-        <p class="leading-loose"><a href="https://www.digitalocean.com/?utm_medium=opensource&utm_source=picsum"><img class="digitalocean" alt="Powered by DigitalOcean" src="assets/images/digitalocean.svg"></a></p>
+        <p class="leading-loose">
+          <a href="https://www.digitalocean.com/?utm_medium=opensource&utm_source=picsum">
+            <img class="sponsor" alt="Powered by DigitalOcean" src="assets/images/digitalocean.svg">
+          </a>
+          <a href="https://belugacdn.com?ref=picsum.photos">
+            <img class="sponsor" alt="CDN provided by BelugaCDN" src="assets/images/belugacdn.png">
+          </a>
+        </p>
         <p class="leading-loose">Created by <a class="no-underline" href="https://dmarby.se">David Marby</a> & <a class="no-underline" href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
         <p class="leading-loose"><a class="no-underline" href="https://github.com/DMarby/picsum-photos">Source</a></p>
         <p class="leading-loose">Having trouble? Poke <a class="no-underline" href="https://twitter.com/DMarby">@DMarby</a> on Twitter</p>
