Use statically sized image for header, remove image in footer

--- a/src/images.html
+++ b/src/images.html
@@ -26,7 +26,6 @@
 
   <link rel="stylesheet" href="assets/css/tailwind.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <script defer src="assets/js/main.js"></script>
   <script defer src="assets/js/images.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -106,7 +105,7 @@
   </template>
 
   <footer>
-    <div class="overlay flex justify-center">
+    <div class="flex justify-center">
       <div>
         <p class="leading-loose">
           <a href="https://www.digitalocean.com/?utm_medium=opensource&utm_source=picsum">
