--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,6 @@
 
   <link rel="stylesheet" href="assets/css/tailwind.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
-  <script defer src="assets/js/main.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -157,7 +156,7 @@
   </div>
 
   <footer>
-    <div class="overlay flex justify-center">
+    <div class="flex justify-center">
       <div>
         <p class="leading-loose">
           <a href="https://www.digitalocean.com/?utm_medium=opensource&utm_source=picsum">
