--- a/src/images.html
+++ b/src/images.html
@@ -108,10 +108,10 @@
     <div class="flex justify-center">
       <div>
         <p class="leading-loose">
-          <a href="https://www.digitalocean.com/?utm_medium=opensource&utm_source=picsum">
+          <a class="no-underline" href="https://www.digitalocean.com/?utm_medium=opensource&utm_source=picsum">
             <img class="sponsor" alt="Powered by DigitalOcean" src="assets/images/digitalocean.svg">
           </a>
-          <a href="https://belugacdn.com?ref=picsum.photos">
+          <a class="no-underline" href="https://belugacdn.com?ref=picsum.photos">
             <img class="sponsor" alt="CDN provided by BelugaCDN" src="assets/images/belugacdn.png">
           </a>
         </p>
