Document file endings

--- a/src/index.html
+++ b/src/index.html
@@ -121,6 +121,8 @@
         <p>To request multiple images of the same size in your browser, you need to add a random parameter to prevent the images from being cached</p>
 <pre><code class="break-words">&lt;img src="https://picsum.photos/200/300?random=1"&gt;
 &lt;img src="https://picsum.photos/200/300?random=2"&gt;</code></pre>
+        <p>If you need a file ending, you can add <code>.jpg</code> to the end of the url.</p>
+        <pre><code class="break-words"><a class="no-underline" href="/200/300.jpg">https://picsum.photos/200/300.jpg</a></code></pre>
       </div>
       <div class="md:w-full px-4 pt-4 lg:w-1/2 lg:px-8 lg:pt-0 ">
         <img class="resize" src="/id/870/536/354?grayscale&blur=2">
