FIx squashing of the header image on smaller resolutions

--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,8 @@
         <h1>Lorem Picsum</h1>
         <h2>The Lorem Ipsum for photos.</h2>
       </div>
-      <div class="md:w-full px-4 pt-4 lg:w-1/2 lg:px-8 lg:pt-0 ">
-        <img class="resize" src="/536/354" style="height: 354px;">
+      <div class="md:w-full px-4 pt-4 lg:w-1/2 lg:px-8 lg:pt-0" style="height: 354px;">
+        <img class="resize" src="/536/354">
       </div>
 
       <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CK7DC27M&placement=picsumphotos" id="_carbonads_js"></script>
