Update the image used for the seed documentation

--- a/src/index.html
+++ b/src/index.html
@@ -86,11 +86,11 @@
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
         <h2>Static Random Image</h2>
         <p>Get the same random image every time based on a seed, by adding <code>/seed/{seed}</code> to the start of the url.</p>
-        <pre><code class="break-words"><a class="no-underline" href="/seed/example/200/300">https://picsum.photos/seed/example/200/300</a></code></pre>
+        <pre><code class="break-words"><a class="no-underline" href="/seed/picsum/200/300">https://picsum.photos/seed/picsum/200/300</a></code></pre>
         <p>You can find a list of all the images <a class="no-underline" href="/images">here.</a></p>
       </div>
       <div class="md:w-full px-4 pt-4 lg:w-1/2 lg:px-8 lg:pt-0">
-        <img class="resize" src="/seed/example/536/354">
+        <img class="resize" src="/seed/picsum/536/354">
       </div>
     </div>
   </div>
