Add documentation for getting images in the webp format

--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,8 @@
 &lt;img src="https://picsum.photos/200/300?random=2"&gt;</code></pre>
         <p>If you need a file ending, you can add <code>.jpg</code> to the end of the url.</p>
         <pre><code class="break-words"><a class="no-underline" href="/200/300.jpg">https://picsum.photos/200/300.jpg</a></code></pre>
+        <p>To get an image in the WebP format, you can add <code>.webp</code> to the end of the url.</p>
+        <pre><code class="break-words"><a class="no-underline" href="/200/300.webp">https://picsum.photos/200/300.webp</a></code></pre>
       </div>
       <div class="md:w-full px-4 pt-4 lg:w-1/2 lg:px-8 lg:pt-0">
         <img class="resize" src="/id/870/536/354?grayscale&blur=2">
