--- a/web/index.html
+++ b/web/index.html
@@ -198,8 +198,8 @@
           <a class="no-underline" href="https://www.digitalocean.com/?utm_medium=opensource&utm_source=picsum">
             <img class="sponsor" alt="Powered by DigitalOcean" src="assets/images/digitalocean.svg">
           </a>
-          <a class="no-underline" href="https://belugacdn.com?ref=picsum.photos">
-            <img class="sponsor" alt="CDN provided by BelugaCDN" src="assets/images/belugacdn.png">
+          <a class="no-underline" href="https://cloudflare.com">
+            <img class="sponsor" alt="CDN provided by Cloudflare" src="assets/images/cloudflare.svg">
           </a>
         </p>
         <p class="leading-loose">Created by <a class="no-underline" href="https://dmarby.se">David Marby</a> & <a class="no-underline" href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
