Add ids to every section on main page, for better linking

--- a/web/index.html
+++ b/web/index.html
@@ -53,7 +53,7 @@
     </div>
   </header>
 
-  <div class="content-section-dark">
+  <div class="content-section-dark" id="easy-to-use">
     <div class="container mx-auto flex flex-wrap">
       <div class="lg:w-1/4"></div>
       <div class="md:w-full lg:w-1/2 text-center">
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="content-section-light">
+  <div class="content-section-light" id="specific-image">
     <div class="container mx-auto flex flex-wrap">
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
         <h2>Specific Image</h2>
@@ -81,7 +81,7 @@
     </div>
   </div>
 
-  <div class="content-section-light">
+  <div class="content-section-light" id="random-image">
     <div class="container mx-auto flex flex-wrap md:flex-row-reverse">
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
         <h2>Static Random Image</h2>
@@ -94,7 +94,7 @@
     </div>
   </div>
 
-  <div class="content-section-light">
+  <div class="content-section-light" id="grayscale-image">
     <div class="container mx-auto flex flex-wrap">
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
         <h2>Grayscale</h2>
@@ -107,7 +107,7 @@
     </div>
   </div>
 
-  <div class="content-section-light">
+  <div class="content-section-light" id="blur-image">
     <div class="container mx-auto flex flex-wrap md:flex-row-reverse">
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
         <h2>Blur</h2>
@@ -122,7 +122,7 @@
     </div>
   </div>
 
-  <div class="content-section-light">
+  <div class="content-section-light" id="advanced-usage">
     <div class="container mx-auto flex flex-wrap">
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
         <h2>Advanced Usage</h2>
@@ -143,7 +143,7 @@
     </div>
   </div>
 
-  <div class="content-section-light">
+  <div class="content-section-light" id="list-images">
     <div class="container mx-auto flex flex-wrap md:flex-row-reverse">
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
         <h2>List Images</h2>
@@ -170,7 +170,7 @@
     </div>
   </div>
 
-  <div class="content-section-light">
+  <div class="content-section-light" id="image-details">
     <div class="container mx-auto flex flex-wrap">
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
         <h2>Image Details</h2>
