Add /seed/{seed}/info endpoint
Fixes #89

--- a/web/index.html
+++ b/web/index.html
@@ -174,8 +174,9 @@
     <div class="container mx-auto flex flex-wrap">
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
         <h2>Image Details</h2>
-        <p>Get information about a specific image by using the the <code>/id/{id}/info</code> endpoint.</p>
-        <pre><code class="break-words"><a class="no-underline" href="/id/0/info">https://picsum.photos/id/0/info</a></code></pre>
+        <p>Get information about a specific image by using the <code>/id/{id}/info</code> and <code>/seed/{seed}/info</code> endpoints.</p>
+        <pre><code class="break-words"><a class="no-underline" href="/id/0/info">https://picsum.photos/id/0/info</a>
+<a class="no-underline" href="/seed/picsum/info">https://picsum.photos/seed/picsum/info</a></code></pre>
         <p>You can find out the ID of an image by looking at the <code>Picsum-ID</code> header, or the <code>User Comment</code> field in the EXIF metadata.</p>
       </div>
       <div class="md:w-full lg:w-1/2 lg:px-8 px-4">
